# aigc-history

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
migrations/: 001_initial_schema.cql
src/: lib.rs  main.rs
src/api/: dto.rs  error.rs  mod.rs  routes.rs
src/api/handlers/: branch.rs  conversation.rs  fork.rs  message.rs  mod.rs  share.rs
src/config/: mod.rs  settings.rs
src/db/: client.rs  migration.rs  mod.rs  models.rs  queries.rs
src/domain/: branch.rs  content.rs  conversation.rs  message.rs  mod.rs  permissions.rs
src/middleware/: auth.rs
src/repositories/: branch_repo.rs  lineage_repo.rs  mod.rs  share_repo.rs
src/services/: branch_service.rs  conversation_service.rs  fork_service.rs  mod.rs  share_service.rs
src/utils/: lineage_utils.rs  mod.rs  uuid_utils.rs
tests/integration/: conversation_tests.rs  mod.rs  vitest.config.ts
tests/integration/api/: conversation.integration.spec.ts
